include/dss_capi.h

    /*! 
    Array of names of all Generator objects.
    */
    DSS_CAPI_DLL void Generators_Get_AllNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Sets first Generator to be active.  Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t Generators_Get_First(void);
    /*! 
    Sets a generator active by name.
    */
    DSS_CAPI_DLL const char* Generators_Get_Name(void);
    /*! 
    Sets next Generator to be active.  Returns 0 if no more.
    */
    DSS_CAPI_DLL int32_t Generators_Get_Next(void);
    /*! 
    Array of Names of all generator energy meter registers
    
    See also the enum `GeneratorRegisters`.
    */
    DSS_CAPI_DLL void Generators_Get_RegisterNames(char*** ResultPtr, int32_t* ResultDims);
    /*! 
    Array of values in generator energy meter registers.
    */
    DSS_CAPI_DLL void Generators_Get_RegisterValues(double** ResultPtr, int32_t* ResultDims);
    /*! 
    Indicates whether the generator is forced ON regardless of other dispatch criteria.
    */
    DSS_CAPI_DLL uint16_t Generators_Get_ForcedON(void);
    /*! 
    Indicates whether the generator is forced ON regardless of other dispatch criteria.
    */
    DSS_CAPI_DLL void Generators_Set_ForcedON(uint16_t Value);
    /*! 
    Sets a generator active by name.
    */
    DSS_CAPI_DLL void Generators_Set_Name(const char* Value);
    /*! 
    Voltage base for the active generator, kV
    */
    DSS_CAPI_DLL double Generators_Get_kV(void);
    /*! 
    kvar output for the active generator. Updates power factor based on present kW value.
    */
    DSS_CAPI_DLL double Generators_Get_kvar(void);
    /*! 
    kW output for the active generator. kvar is updated for current power factor.
    */
    DSS_CAPI_DLL double Generators_Get_kW(void);
    /*! 
    Power factor (pos. = producing vars). Updates kvar based on present kW value.
    */
    DSS_CAPI_DLL double Generators_Get_PF(void);
    /*! 
    Number of phases
    */
    DSS_CAPI_DLL int32_t Generators_Get_Phases(void);
    /*! 
    Voltage base for the active generator, kV
    */
    DSS_CAPI_DLL void Generators_Set_kV(double Value);
    /*! 
    kvar output for the active generator. Updates power factor based on present kW.
    */
    DSS_CAPI_DLL void Generators_Set_kvar(double Value);
    /*! 
    kW output for the active generator. kvar is updated for current power factor
    */
    DSS_CAPI_DLL void Generators_Set_kW(double Value);
    /*! 
    Power factor (pos. = producing vars). Updates kvar based on present kW value.
    */
    DSS_CAPI_DLL void Generators_Set_PF(double Value);
    /*! 
    Number of phases
    */
    DSS_CAPI_DLL void Generators_Set_Phases(int32_t Value);
    /*! 
    Number of Generator Objects in Active Circuit
    */
    DSS_CAPI_DLL int32_t Generators_Get_Count(void);
    /*! 
    Get/Set active Generator by index into generators list.  1..Count
    */
    DSS_CAPI_DLL int32_t Generators_Get_idx(void);
    /*! 
    Get/Set active Generator by index into generators list. 1..Count
    */
    DSS_CAPI_DLL void Generators_Set_idx(int32_t Value);
    /*! 
    Generator Model
    */
    DSS_CAPI_DLL int32_t Generators_Get_Model(void);
    /*! 
    Generator Model
    */
    DSS_CAPI_DLL void Generators_Set_Model(int32_t Value);
    /*! 
    kVA rating of the generator
    */
    DSS_CAPI_DLL double Generators_Get_kVArated(void);
    /*! 
    KVA Rating of the generator
    */
    DSS_CAPI_DLL void Generators_Set_kVArated(double Value);
    /*! 
    vmaxpu for Generator model
    */
    DSS_CAPI_DLL double Generators_Get_Vmaxpu(void);
    /*! 
    Vminpu for Generator model
    */
    DSS_CAPI_DLL double Generators_Get_Vminpu(void);
    /*! 
    Vmaxpu for generator model
    */
    DSS_CAPI_DLL void Generators_Set_Vmaxpu(double Value);
    /*! 
    Vminpu for Generator model
    */
    DSS_CAPI_DLL void Generators_Set_Vminpu(double Value);